# dnd-character-manager

./: .gitignore  BROKEN_LINKS.md  CHANGELOG.md  DATA_GUIDE.md  I18N_CONTEXT.md  README.md  TRANSLATION_GUIDE.md  _apply_translations.py  _untranslated.json  _untranslated_optfeatures.json  crowdin-glossary.csv  crowdin.yml  index.html  package-lock.json  package.json  start.bat  tailwind.config.js  vite.config.ts
.github/workflows/: deploy-pages.yml  release.yml
docs/: CROWDIN_GUIDE.md  DEPLOY.md  I18N_CONTEXT.md  PLAN_ACTIVATED_EFFECTS.md  PLAN_CLASS_DESCRIPTION.md  PLAN_CLASS_TAGS.md  PLAN_DESKTOP.md  PLAN_FILTER_TAG.md  PLAN_INVOCATION_TAG.md  PLAN_ITEMPROPERTY_TAG.md  PLAN_PARTY.md  PLAN_PARTY_LOCAL.md  PLAN_TRAP_SCALEDAMAGE_TAGS.md  SERVER_SETUP.md  TODO.md  TRANSLATION_GUIDE.md  UPDATE_SERVER.md  WINDOWS_SETUP.md  update-pointer.example.json
scripts/: audit-mechanics.mjs  bundle-data.mjs  check-web-imports.mjs  dump-remaining.mjs  i18n-apply-patch.mjs  i18n-extract.mjs  i18n-status.mjs  patch-spells.json  release.ps1
scripts/i18n-tools/: .gitignore  dump-remaining.mjs  fill-dupes.mjs  find-latin-all.mjs  find-latin.mjs  fix-bg-bare-tags.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  updater.rs
src-tauri/src/party/: client.rs  discovery.rs  host.rs  mod.rs  protocol.rs
src/components/: ActiveFormsSection.tsx  AutoSpellsNotificationModal.tsx  CharacterCreator.tsx  CharacterJsonEditorModal.tsx  CharacterList.tsx  (+27 more)
(+4641 files in other folders)
